# wingpanel

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  install_deps.sh  meson.build  meson.build.rej  meson_options.txt
.github/workflows/: gettext.yml  main.yml  release.yml
data/: autostart.desktop  com.github.elementary.wingpanel.desktop  io.elementary.panel.desktop  meson.build  wingpanel.appdata.xml.in  wingpanel.desktop  wingpanel.desktop.in  wingpanel.gresource.xml  wingpanel.metainfo.xml.in
data/styles/: Application.css  application.css  panel.css
debian/: changelog  control  copyright  io.elementary.wingpanel.install  io.elementary.wingpanel.postinst  libwingpanel-2.0-0.install  libwingpanel-2.0-dev.install  libwingpanel-3.0-0.install  libwingpanel-3.0-dev.install  libwingpanel-9-dev.install  libwingpanel-dev.install  libwingpanel3.install  rules  wingpanel.install
lib/: CMakeLists.txt  Indicator.vala  IndicatorManager.vala  IndicatorPosition.vala  PopoverMenuItem.vala  Utils.vala  config.vala.cmake  config.vapi  meson.build  wingpanel-2.0.deps  wingpanel-3.0.deps  wingpanel-9.deps  wingpanel.pc.cmake
lib/Widgets/: AutomaticScrollBox.vala  Button.vala  Container.vala  DynamicIcon.vala  IndicatorButton.vala  IndicatorSeparator.vala  IndicatorSwitch.vala  OverlayIcon.vala  Separator.vala  Switch.vala
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+168 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+166 more)
protocol/: pantheon-desktop-shell.vapi
sample/: CMakeLists.txt  KeyboardInput.vala  SampleIndicator.vala  meson.build
schemas/: CMakeLists.txt  io.elementary.desktop.wingpanel.gschema.xml  meson.build  org.pantheon.desktop.wingpanel.gschema.xml
src/: Application.vala  CMakeLists.txt  MenuDaemon.vala  PanelWindow.vala  SessionManager.vala  Utils.vala  Wingpanel.vala  is_wayland.c  meson.build
src/Services/: BackgroundManager.vala  DisplayConfig.vala  IndicatorSorter.vala  NotifyPluginClient.vala  PopoverManager.vala  Settings.vala  WMDBus.vala
src/Widgets/: IndicatorBar.vala  IndicatorEntry.vala  IndicatorMenuBar.vala  IndicatorPopover.vala  MenuBar.vala  Panel.vala  StyleClass.vala
vapi/: Clutter-7-custom.vala  Meta-18.metadata  is_wayland.vapi  libmutter-3.vapi  libmutter.vapi  meson.build  mutter-clutter.vapi  mutter-cogl-14.vapi  mutter-cogl-path-8.vapi  mutter-mtk-13.vapi
wingpanel-interface/: AlphaManager.vala  BackgroundManager.vala  CMakeLists.txt  DBusServer.vala  FocusManager.vala  Main.vala  Settings.vala  Utils.vala  meson.build
